<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">
    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@+id/email_edit_text_linear"
                app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:background="@drawable/rounded_bg_rectangle"
                    android:layout_height="100dp"
                    android:id="@+id/driver_linearLayout">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/truck"
                        android:layout_marginTop="10dp"
                        android:id="@+id/imageView2"/>
                <TextView
                        android:text="@string/str_driver_txt"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_height="34dp"
                        android:id="@+id/textView2"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="50dp"
                    android:id="@+id/client_linearLayout"
            >
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@mipmap/client" android:id="@+id/imageView"/>
                <TextView
                        android:text="@string/str_client_txt"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:id="@+id/textView"/>
            </LinearLayout>


        </LinearLayout>




        <LinearLayout
                android:id="@+id/email_edit_text_linear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/login_edit_text_padding"
                android:layout_marginStart="@dimen/login_edit_text_padding"
               android:layout_marginBottom="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/nextButton" >


            <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:src="@mipmap/phone" />



            <android.support.design.widget.TextInputLayout
                    android:id="@+id/mobileNumber_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:errorEnabled="true"
                    android:hint="@string/str_login_user_name_txt"
                    android:textColorHint="@color/white">
                <EditText
                        android:id="@+id/register_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="5dp"
                        android:background="@null"
                        android:ems="10"
                        android:textColor="@color/white"
                        android:gravity="start|center_vertical"
                        android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical|clip_horizontal"
                    android:text="@string/str_login_ksa_key_txt"
            />

            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ksa_flag"
                    android:layout_marginEnd="1dp"/>

        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/login_edit_text_padding"
                android:layout_marginStart="@dimen/login_edit_text_padding"

                app:layout_constraintEnd_toStartOf="@id/email_edit_text_linear"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text_linear"
                android:background="@color/white" />


        <Button
                android:id="@+id/nextButton"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/str_next_button_txt"
                android:textAllCaps="false"
                android:textSize="@dimen/def_medium_text_size"
                android:background="@drawable/rounded_corner_bg"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
                android:id="@+id/logo"
                android:layout_width="115dp"
                android:layout_height="160dp"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:src="@mipmap/login_logo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    </ScrollView>
</LinearLayout>