<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@mipmap/login_bg">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="115dp"
                    android:layout_height="160dp"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:src="@mipmap/login_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@string/str_login_forgot_password_txt"
                    android:layout_marginEnd="@dimen/login_edit_text_padding"
                    android:layout_marginStart="@dimen/login_edit_text_padding"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/login_button"/>

            <Button
                    android:id="@+id/login_button"
                    android:layout_width="220dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/str_login_button_txt"
                    android:textAllCaps="false"
                    android:textSize="@dimen/def_medium_text_size"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_corner_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/create_account_view"
            />


            <LinearLayout
                    android:id="@+id/email_edit_text_linear"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="@dimen/login_edit_text_padding"
                    android:layout_marginStart="@dimen/login_edit_text_padding"
                    android:layout_marginTop="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/password_edit_text_linear">


                <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="13dp"
                        android:src="@mipmap/phone"/>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/user_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="@string/str_login_user_name_txt"
                        android:textColorHint="@color/white">
                    <EditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="5dp"
                            android:background="@null"
                            android:ems="10"
                            android:text="201201755052"
                            android:textColor="@color/white"
                            android:gravity="start|center_vertical"
                            android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|clip_horizontal"
                        android:text="@string/str_login_ksa_key_txt"
                />

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ksa_flag"
                        android:layout_marginEnd="1dp"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/login_edit_text_padding"
                    android:layout_marginStart="@dimen/login_edit_text_padding"

                    app:layout_constraintEnd_toStartOf="@id/email_edit_text_linear"
                    app:layout_constraintTop_toBottomOf="@id/email_edit_text_linear"
                    android:background="@color/white"/>

            <LinearLayout
                    android:id="@+id/password_edit_text_linear"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="@dimen/login_edit_text_padding"
                    android:layout_marginStart="@dimen/login_edit_text_padding"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/forgot_password">

                <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="13dp"
                        android:src="@mipmap/password"/>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:hint="@string/str_login_password_hint_txt"
                        android:textColorHint="@color/white">

                    <EditText
                            android:id="@+id/password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="@null"
                            android:ems="20"
                            android:text="123456"
                            android:textColor="@color/white"
                            android:inputType="textPassword"
                            android:gravity="start|center_vertical"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                        android:id="@+id/imageView_show_password"
                        android:layout_width="30dp"
                        android:layout_height="23dp"
                        android:src="@mipmap/visiable"
                        android:layout_gravity="center"
                />


            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/login_edit_text_padding"
                    android:layout_marginStart="@dimen/login_edit_text_padding"

                    app:layout_constraintEnd_toStartOf="@id/password_edit_text_linear"
                    app:layout_constraintTop_toBottomOf="@id/password_edit_text_linear"
                    android:background="@color/white"/>


            <LinearLayout
                    android:id="@+id/create_account_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/register">

                <TextView
                        android:id="@+id/create_account_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/def_small_text_size"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:id="@+id/register_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/str_login_register_txt"
                        android:textColor="@color/register_text_color"
                        android:textSize="@dimen/def_small_text_size"/>


            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</LinearLayout>