<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>
    <LinearLayout
            android:id="@+id/order_linear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="gone"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/light_grident_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/id_getting_location_view">
        <TextView
                android:text="@string/str_home_map_order_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/textView4"
                />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        android:src="@mipmap/next"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/id_getting_location_view"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="clip_horizontal|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/map_bottom_color2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
    <TextView
            android:text="@string/str_home_map_locating_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/textView5" android:layout_weight="1"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/sae_location"
            android:layout_gravity="end|bottom"
            app:backgroundTint="@color/white"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/save_text"/>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="end|bottom"
            app:srcCompat="@mipmap/my_location"
            app:backgroundTint="@color/white"
            android:id="@+id/my_location"
            android:layout_marginBottom="15dp" app:layout_constraintBottom_toTopOf="@+id/save_location"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/str_map_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:id="@+id/save_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/order_linear"
            app:layout_constraintEnd_toEndOf="@+id/my_location"
            app:layout_constraintStart_toStartOf="@+id/my_location"/>

</android.support.constraint.ConstraintLayout>